# akai-net

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  entrypoint.sh  healthd.py  pipeline_hub.py  switch-model.sh
.github/workflows/: build.yml  webhook.yml
src/: duo.rs  hub_main.rs  pipeline.rs  worker_main.rs
tunnel/certs/: ca.crt
