[package]
name = "akai-net"
version = "0.1.0"
edition = "2021"
description = "Distributed layer pipeline inference hub"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.8"
base64 = "0.22"
chrono = "0.4"

[[bin]]
name = "hub"
path = "src/hub_main.rs"

[[bin]]
name = "worker"
path = "src/worker_main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true